--- a/pescamines.html
+++ b/pescamines.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Juego Buscaminas</h1>
-    <button onclick="iniciarPartida()">Iniciar Partida</button>
-    <div id="taulell"></div>
+    <h1 class="title">Juego Buscaminas</h1>
+    <div class="containerBtn">
+        <button onclick="iniciarPartida()">Iniciar Partida</button>   
+    </div>
+    <div class="containerTaula">
+        <div id="taulell"></div>
+    </div>
+    
     
 </body>
 </html>
